# mad-experiments-template

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: example.yaml  s5_deltanet_deep.yaml  s5_deltanet_scan.yaml  s5_deltanet_swaps.yaml  s5_deltanet_swaps_k32.yaml  s5_deltanet_swaps_k500.yaml  s5_example.yaml  s5_transformer_deep.yaml  s5_transformer_scan.yaml
docs/: README.md  RUNBOOK.md  plan.md
harness/: evaluate.py  schema.py
models/: __init__.py  deltanet.py  transformer.py
tasks/: __init__.py  base.py
tasks/addition/: __init__.py  dataset.py  dfa.py  tokens.py
tasks/compression/: dataset.py  tokens.py
tasks/in_context_recall/: dataset.py  tokens.py
tasks/s5/: dataset.py  dfa.py  tokens.py
tasks/selective_copy/: dataset.py  tokens.py
tasks/state_tracking/: dataset.py  tokens.py
train/: __init__.py  eval_ood.py  evaluate_dfa.py  launch.py  local.py  modal.py  modal_config.py  run.py  run_config.py  train.py
