[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nc1-tc0-transformer-toy-experiments"
version = "0.1.0"
description = "Empirical testing of TC0 vs NC1 separation using transformer generalization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=61.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pylint>=4.0.4",
    "ruff>=0.14.11",
    "modal>=1.3.0.post1",
    "wandb>=0.15.0",
    "flash-linear-attention>=0.0.1.post1",
    "accelerate>=0.25.0",
    "huggingface-hub>=1.3.5",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
run-permutation = "experiments.permutation_composition:main"
run-multiplication = "experiments.iterated_multiplication:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataset*", "models*", "train*", "src*"]
