[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mad-experiments"
version = "0.1.0"
description = "Evaluation harness for novel architecture discovery on group composition tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "flash-linear-attention>=0.0.1.post1",
    "accelerate>=0.25.0",
    "huggingface-hub>=1.3.5",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "tasks*", "train*", "harness*"]
